# Zyra

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES.md  SECURITY.md
.github/workflows/: rust.yml
extensions/ZyraFileIcons/: package.json  zyralang--icons-0.0.1.vsix  zyralang--icons-1.0.0.vsix
extensions/ZyraFileIcons/icons/: zyralang-icon-theme.json
installer/: README.md  ZyraSetup.iss  install.bat  install.ps1  install.sh
physics_calc/: main.zr  zyra.toml
pong_game/: main.zr  main.zyc
pong_game_modular/: ball.zr  main.zr  main.zyc  paddle.zr  zyra.toml
pong_game_modular/src/: ball.zr  paddle.zr
src/: error.rs  lib.rs  main.rs  resolver.rs
src/compiler/: bytecode.rs  mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/semantic/: borrow.rs  lifetime.rs  mod.rs  ownership.rs  scope.rs  types.rs
src/stdlib/: core.rs  env.rs  fs.rs  game.rs  io.rs  linkedlist.rs  math.rs  mem.rs  mod.rs  process.rs  string.rs  sync.rs  thread.rs  time.rs  vec.rs
src/vm/: heap.rs  mod.rs  value.rs
tests/calculator/: main.zr  zyra.toml
tests/physics_calc/: main.zr  zyra.toml
tests/pong_game_modular/: main.zr  zyra.toml
