[package]
name = "zyra"
version = "1.0.1"
edition = "2021"
authors = ["Inggrit Setya Budi"]
description = "A modern, memory-safe programming language with ownership semantics - built for performance, safety, and simplicity"
license = "MIT"

[[bin]]
name = "zyra"
path = "src/main.rs"

[lib]
name = "zyra"
path = "src/lib.rs"

[dependencies]
minifb = "0.25"
lazy_static = "1.4"
colored = "2.0"
image = "0.24"  

[profile.release]
opt-level = 3
lto = true
